chez section index

--- a/index.html
+++ b/index.html
@@ -94,10 +94,97 @@
               </figcaption>
             </figure>
           </a>
+          <a class="osteo__all__link" href="">
+            <figure class="osteo__all__figure">
+              <img
+                class="osteo__all__img"
+                src="assets/images/Enfants.jpg"
+                alt=""
+              />
+              <figcaption class="osteo__all__figcaption">
+                <h3 class="osteo__all__figcaption__title">Enfants</h3>
+                <p class="osteo__all__figcaption__desc">
+                  Prévenir les troubles posturaux, favoriser une croissance et
+                  un équilibre sain.
+                </p>
+                <a class="osteo__all__figcaption__link" href=""
+                  >En savoir plus</a
+                >
+              </figcaption>
+            </figure>
+          </a>
+          <a class="osteo__all__link" href="">
+            <figure class="osteo__all__figure">
+              <img
+                class="osteo__all__img"
+                src="assets/images/Enfants.jpg"
+                alt=""
+              />
+              <figcaption class="osteo__all__figcaption">
+                <h3 class="osteo__all__figcaption__title">Enfants</h3>
+                <p class="osteo__all__figcaption__desc">
+                  Prévenir les troubles posturaux, favoriser une croissance et
+                  un équilibre sain.
+                </p>
+                <a class="osteo__all__figcaption__link" href=""
+                  >En savoir plus</a
+                >
+              </figcaption>
+            </figure>
+          </a>
+          <a class="osteo__all__link" href="">
+            <figure class="osteo__all__figure">
+              <img
+                class="osteo__all__img"
+                src="assets/images/Enfants.jpg"
+                alt=""
+              />
+              <figcaption class="osteo__all__figcaption">
+                <h3 class="osteo__all__figcaption__title">Enfants</h3>
+                <p class="osteo__all__figcaption__desc">
+                  Prévenir les troubles posturaux, favoriser une croissance et
+                  un équilibre sain.
+                </p>
+                <a class="osteo__all__figcaption__link" href=""
+                  >En savoir plus</a
+                >
+              </figcaption>
+            </figure>
+          </a>
+          <a class="osteo__all__link" href="">
+            <figure class="osteo__all__figure">
+              <img
+                class="osteo__all__img"
+                src="assets/images/Enfants.jpg"
+                alt=""
+              />
+              <figcaption class="osteo__all__figcaption">
+                <h3 class="osteo__all__figcaption__title">Enfants</h3>
+                <p class="osteo__all__figcaption__desc">
+                  Prévenir les troubles posturaux, favoriser une croissance et
+                  un équilibre sain.
+                </p>
+                <a class="osteo__all__figcaption__link" href=""
+                  >En savoir plus</a
+                >
+              </figcaption>
+            </figure>
+          </a>
         </div>
       </section>
-      <section>
-        <h2>Votre Bien-être : Chez Vous ou au Cabinet</h2>
+      <section data-aos="fade-in" class="comfort">
+        <h2 class="comfort__title">Votre Bien-être : Chez Vous ou au Cabinet</h2>
+        <div class="comfort__wrapper">
+          <div class="comfort__wrapper__home">
+            <div class="photo"></div>
+            <article class="comfort__wrapper__home__article">
+              <h3>Les Bienfaits d’une Séance d’Ostéopathie à Domicile sur Bordeaux et ses Alentours</h3>
+              <p>En choisissant un ostéopathe à domicile sur Bordeaux et ses alentours, comme Bruges, Le Bouscat, Blanquefort, Eysines, ou Caudéran, vous profitez d’un confort optimal pour vos séances d’ostéopathie.</p>
+              <p>Fini le stress des déplacements, surtout en cas de douleurs ou de fatigue : je me déplace directement chez vous, avec tout le matériel nécessaire pour assurer une séance de qualité dans le calme et la sécurité de votre espace personnel.</p>
+            </article>
+          </div>
+
+        </div>
       </section>
     </main>
     <footer></footer>
