--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
         <a class="navbar__link" href="consulter.html">Quand Consulter ?</a>
         <a class="navbar__link" href="tarifs.html">Tarifs</a>
         <a class="navbar__link" href="liendoctolib">
-          <button class="btn">Rdv en ligne</button>
+          <button class="btn btn-black">Rdv en ligne</button>
         </a>
       </nav>
     </header>
     <main>
-      <section data-aos="fade-right" class="hero">
+      <section data-aos="fade-right" class="hero sect-mb">
         <div class="hero__wrapper">
           <p class="hero__wrapper__name">Henrique Nunes</p>
           <h1 class="hero__wrapper__location">Ostéopathe à Bruges</h1>
@@ -59,7 +59,7 @@
           alt="Ostéopathe Henrique Nunes"
         />
       </section>
-      <section data-aos="fade-in" class="osteo">
+      <section data-aos="fade-in" class="osteo sect-mb">
         <article class="osteo__intro">
           <h2 class="osteo__intro__title">
             L'Ostéopathie pour Tous : Un Soin Adapté à Chaque Âge de la Vie
@@ -172,19 +172,53 @@
           </a>
         </div>
       </section>
-      <section data-aos="fade-in" class="comfort">
+      <section data-aos="fade-in" class="comfort sect-mb">
         <h2 class="comfort__title">Votre Bien-être : Chez Vous ou au Cabinet</h2>
         <div class="comfort__wrapper">
           <div class="comfort__wrapper__home">
             <div class="photo"></div>
             <article class="comfort__wrapper__home__article">
               <h3>Les Bienfaits d’une Séance d’Ostéopathie à Domicile sur Bordeaux et ses Alentours</h3>
-              <p>En choisissant un ostéopathe à domicile sur Bordeaux et ses alentours, comme Bruges, Le Bouscat, Blanquefort, Eysines, ou Caudéran, vous profitez d’un confort optimal pour vos séances d’ostéopathie.</p>
-              <p>Fini le stress des déplacements, surtout en cas de douleurs ou de fatigue : je me déplace directement chez vous, avec tout le matériel nécessaire pour assurer une séance de qualité dans le calme et la sécurité de votre espace personnel.</p>
+              <div class="comfort_wrapper__home__article__text">
+                <p>En choisissant un ostéopathe à domicile sur Bordeaux et ses alentours, comme Bruges, Le Bouscat, Blanquefort, Eysines, ou Caudéran, vous profitez d’un confort optimal pour vos séances d’ostéopathie.</p>
+                <p>Fini le stress des déplacements, surtout en cas de douleurs ou de fatigue : je me déplace directement chez vous, avec tout le matériel nécessaire pour assurer une séance de qualité dans le calme et la sécurité de votre espace personnel.</p>
+              </div>
+              <button class="btn btn-light">En savoir plus</button>
             </article>
           </div>
 
+          <div class="comfort__wrapper__home">
+            <article class="comfort__wrapper__home__article">
+              <h3>Un Accueil Serein dans Notre Clinique à Mérignac</h3>
+              <div class="comfort_wrapper__home__article__text">
+                <p>En choisissant une consultation en clinique d'ostéopathie à Mérignac, vous profitez d'un espace calme et dédié à votre bien-être. Notre clinique est entièrement équipée pour vous offrir des séances d'ostéopathie de qualité, dans un cadre professionnel et confortable. Faites l'expérience d'un soin personnalisé, adapté à vos besoins, pour soulager vos douleurs et améliorer votre mobilité.</p>
+              </div>
+              <button class="btn btn-light">En savoir plus</button>
+            </article>
+            <div class="photo">
+            </div>
+          </div>
+
         </div>
+      </section>
+
+      <section class="banner sect-mb">
+        <div class="banner__wrapper">
+          <h3 class="banner__title">Faites le premier pas vers un corps en pleine forme.</h3>
+          <button class="btn btn-light btn-xl">Prendre rendez-vous</button>
+        </div>
+      </section>
+
+      <section class="advice sect-mb">
+        <h2 class="advice__title">L’Avis de mes Patients</h2>
+        <article class="advice__card">
+          <div class="advice__card__avatar">
+            <div class="advice__card__avatar__img"></div>
+            <p>Clément Jeandet</p>
+          </div>
+          <p>“Henrique me suit et m'accompagne depuis début 2024 à travers sa double compétence d'ostéopathe et de préparateur physique. Souffrant de troubles posturaux sévères depuis près de 10 ans, j'ai pu retrouver rapidement, suffisamment de mobilité et de confiance dans mes capacités avec l'aide d'Henrique...”</p>
+          <div class="advice__card__bottom"></div>
+        </article>
       </section>
     </main>
     <footer></footer>
