continue osteo page

--- a/osteopathie.html
+++ b/osteopathie.html
@@ -36,7 +36,6 @@
 </head>
 
 <body>
-  <div class="rect" data-aos="fade-left"></div>
 
   <header data-aos="fade-in" class="header mw-container">
     <div class="header__wrapper">
@@ -53,105 +52,18 @@
       </a>
     </nav>
   </header>
-  <main>
-    <section data-aos="fade-right" class="hero sect-mb mw-container">
-      <div class="hero__wrapper">
-        <p class="hero__wrapper__name">Henrique Nunes</p>
-        <h1 class="hero__wrapper__location">Ostéopathe à Bruges</h1>
-        <p class="hero__wrapper__desc">
-          Ostéopathe expérimenté, situé à Bruges, je suis dédié à améliorer
-          votre bien-être grâce à des techniques adaptées à chaque patient.
-          Mon cabinet d'ostéopathie propose des soins personnalisés pour
-          soulager les douleurs, améliorer la mobilité, et prévenir les
-          troubles musculo-squelettiques, que vous soyez adulte, enfant ou
-          sportif.
-        </p>
-        <a class="hero__wrapper__link" href="osteopathie.html"> <img class="hero__wrapper__link__img"
-            src="/assets/images/roundIcon.svg" alt="round icon"> <span class="hero__wrapper__link__text">En savoir plus
-            sur l'ostéopathie</span></a>
+  <main class="">
+    <section class="banner">
+      <img class="banner__img" src="/assets/images/banner-osteo.jpg" alt="séance osteopathie">
+      <div class="banner__wrapper">
+       <h2 class="banner__title">Consultation d'Ostéopathie</h2>
       </div>
-      <img class="hero__img" src="assets/images/Henrique.png" alt="Ostéopathe Henrique Nunes" />
     </section>
-    <section data-aos="fade-in" class="osteo sect-mb">
-      <article class="osteo__intro">
-        <h2 class="osteo__intro__title">
-          L'Ostéopathie pour Tous : Un Soin Adapté à Chaque Âge de la Vie
-        </h2>
-        <p class="osteo__intro__desc">
-          Que vous soyez enfant, femme enceinte, senior ou sportif,
-          l’ostéopathie offre des solutions adaptées à vos besoins
-          spécifiques. En rétablissant l’équilibre de votre corps, elle
-          soulage les douleurs, prévient les troubles musculo-squelettiques et
-          favorise un bien-être global. Découvrez comment l’ostéopathie peut
-          améliorer votre qualité de vie, quel que soit votre âge ou votre
-          condition physique.
-        </p>
-      </article>
-      <div class="osteo__all">
-        <a class="osteo__all__link" href="">
-          <figure class="osteo__all__figure">
-            <img class="osteo__all__img" src="assets/images/Enfants.jpg" alt="" />
-            <figcaption class="osteo__all__figcaption">
-              <h3 class="osteo__all__figcaption__title">Enfants</h3>
-              <p class="osteo__all__figcaption__desc">
-                Prévenir les troubles posturaux, favoriser une croissance et
-                un équilibre sain.
-              </p>
-              <a class="osteo__all__figcaption__link" href="">En savoir plus</a>
-            </figcaption>
-          </figure>
-        </a>
-        <a class="osteo__all__link" href="">
-          <figure class="osteo__all__figure">
-            <img class="osteo__all__img" src="assets/images/femmes.png" alt="" />
-            <figcaption class="osteo__all__figcaption">
-              <h3 class="osteo__all__figcaption__title">Femmes enceintes</h3>
-              <p class="osteo__all__figcaption__desc">
-                Soulager les douleurs, préparer le corps pour une grossesse harmonieuse.
-              </p>
-              <a class="osteo__all__figcaption__link" href="">En savoir plus</a>
-            </figcaption>
-          </figure>
-        </a>
-        <a class="osteo__all__link" href="">
-          <figure class="osteo__all__figure">
-            <img class="osteo__all__img" src="assets/images/seniors.png" alt="" />
-            <figcaption class="osteo__all__figcaption">
-              <h3 class="osteo__all__figcaption__title">Seniors</h3>
-              <p class="osteo__all__figcaption__desc">
-                Maintenir la mobilité, prévenir les douleurs articulaires et vertébrales efficacement.
-              </p>
-              <a class="osteo__all__figcaption__link" href="">En savoir plus</a>
-            </figcaption>
-          </figure>
-        </a>
-        <a class="osteo__all__link" href="">
-          <figure class="osteo__all__figure">
-            <img class="osteo__all__img" src="assets/images/Enfants.jpg" alt="" />
-            <figcaption class="osteo__all__figcaption">
-              <h3 class="osteo__all__figcaption__title">Enfants</h3>
-              <p class="osteo__all__figcaption__desc">
-                Prévenir les troubles posturaux, favoriser une croissance et
-                un équilibre sain.
-              </p>
-              <a class="osteo__all__figcaption__link" href="">En savoir plus</a>
-            </figcaption>
-          </figure>
-        </a>
-        <a class="osteo__all__link" href="">
-          <figure class="osteo__all__figure">
-            <img class="osteo__all__img" src="assets/images/Enfants.jpg" alt="" />
-            <figcaption class="osteo__all__figcaption">
-              <h3 class="osteo__all__figcaption__title">Enfants</h3>
-              <p class="osteo__all__figcaption__desc">
-                Prévenir les troubles posturaux, favoriser une croissance et
-                un équilibre sain.
-              </p>
-              <a class="osteo__all__figcaption__link" href="">En savoir plus</a>
-            </figcaption>
-          </figure>
-        </a>
-      </div>
+    <section class="mw-container">
+        <p>Une séance d’ostéopathie dure généralement entre 45 minutes et une heure. Lors de cette consultation, l’ostéopathe prend le temps de connaître son patient et d’évaluer ses antécédents pour répondre efficacement à ses besoins.</p>
+        <article>
+            <h2>L'interrogatoire</h2>
+        </article>
     </section>
     <section data-aos="fade-in" class="comfort mw-container sect-mb">
       <h2 class="comfort__title">Votre Bien-être : Chez Vous ou au Cabinet</h2>
