continue osteo page

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
           sportif.
         </p>
         <a class="hero__wrapper__link" href="osteopathie.html"> <img class="hero__wrapper__link__img"
-            src="/assets/images/roundIcon.svg" alt="round icon"> <span class="hero__wrapper__link__text">En savoir plus
+            src="./assets/images/roundIcon.svg" alt="round icon"> <span class="hero__wrapper__link__text">En savoir plus
             sur l'ostéopathie</span></a>
       </div>
-      <img class="hero__img" src="assets/images/Henrique.png" alt="Ostéopathe Henrique Nunes" />
+      <img class="hero__img" src="./assets/images/Henrique.png" alt="Ostéopathe Henrique Nunes" />
     </section>
     <section data-aos="fade-in" class="osteo sect-mb">
       <article class="osteo__intro">
@@ -90,7 +90,7 @@
       <div class="osteo__all">
         <a class="osteo__all__link" href="">
           <figure class="osteo__all__figure">
-            <img class="osteo__all__img" src="assets/images/Enfants.jpg" alt="" />
+            <img class="osteo__all__img" src="./assets/images/Enfants.jpg" alt="" />
             <figcaption class="osteo__all__figcaption">
               <h3 class="osteo__all__figcaption__title">Enfants</h3>
               <p class="osteo__all__figcaption__desc">
@@ -103,7 +103,7 @@
         </a>
         <a class="osteo__all__link" href="">
           <figure class="osteo__all__figure">
-            <img class="osteo__all__img" src="assets/images/femmes.png" alt="" />
+            <img class="osteo__all__img" src="./assets/images/femmes.png" alt="" />
             <figcaption class="osteo__all__figcaption">
               <h3 class="osteo__all__figcaption__title">Femmes enceintes</h3>
               <p class="osteo__all__figcaption__desc">
@@ -115,7 +115,7 @@
         </a>
         <a class="osteo__all__link" href="">
           <figure class="osteo__all__figure">
-            <img class="osteo__all__img" src="assets/images/seniors.png" alt="" />
+            <img class="osteo__all__img" src="./assets/images/seniors.png" alt="" />
             <figcaption class="osteo__all__figcaption">
               <h3 class="osteo__all__figcaption__title">Seniors</h3>
               <p class="osteo__all__figcaption__desc">
@@ -127,7 +127,7 @@
         </a>
         <a class="osteo__all__link" href="">
           <figure class="osteo__all__figure">
-            <img class="osteo__all__img" src="assets/images/Enfants.jpg" alt="" />
+            <img class="osteo__all__img" src="./assets/images/Enfants.jpg" alt="" />
             <figcaption class="osteo__all__figcaption">
               <h3 class="osteo__all__figcaption__title">Enfants</h3>
               <p class="osteo__all__figcaption__desc">
@@ -140,7 +140,7 @@
         </a>
         <a class="osteo__all__link" href="">
           <figure class="osteo__all__figure">
-            <img class="osteo__all__img" src="assets/images/Enfants.jpg" alt="" />
+            <img class="osteo__all__img" src="./assets/images/Enfants.jpg" alt="" />
             <figcaption class="osteo__all__figcaption">
               <h3 class="osteo__all__figcaption__title">Enfants</h3>
               <p class="osteo__all__figcaption__desc">
@@ -191,7 +191,7 @@
     </section>
 
     <section class="banner sect-mb">
-      <img class="banner__img" src="/assets/images/banner.jpg" alt="séance osteopathie">
+      <img class="banner__img" src="././assets/images/banner.jpg" alt="séance osteopathie">
       <div class="banner__wrapper">
         <h3 class="banner__title">Faites le premier pas vers un corps en pleine forme.</h3>
         <button class="btn btn-light btn-xl">Prendre rendez-vous</button>
@@ -209,9 +209,9 @@
           préparateur physique. Souffrant de troubles posturaux sévères depuis près de 10 ans, j'ai pu retrouver
           rapidement, suffisamment de mobilité et de confiance dans mes capacités avec l'aide d'Henrique...”</p>
         <div class="advice__card__bottom">
-          <img class="advice__card__bottom__stars" src="/assets/images/stars1.png" alt="" srcset="">
+          <img class="advice__card__bottom__stars" src="././assets/images/stars1.png" alt="" srcset="">
           <a href="" class="advice__card__bottom__link">
-            <img class="advice__card__bottom__google" src="/assets/images/google.png" alt="" srcset="">
+            <img class="advice__card__bottom__google" src="././assets/images/google.png" alt="" srcset="">
           </a>
         </div>
       </article>
@@ -224,9 +224,9 @@
           préparateur physique. Souffrant de troubles posturaux sévères depuis près de 10 ans, j'ai pu retrouver
           rapidement, suffisamment de mobilité et de confiance dans mes capacités avec l'aide d'Henrique...”</p>
         <div class="advice__card__bottom">
-          <img class="advice__card__bottom__stars" src="/assets/images/stars1.png" alt="" srcset="">
+          <img class="advice__card__bottom__stars" src="././assets/images/stars1.png" alt="" srcset="">
           <a href="" class="advice__card__bottom__link">
-            <img class="advice__card__bottom__google" src="/assets/images/google.png" alt="" srcset="">
+            <img class="advice__card__bottom__google" src="././assets/images/google.png" alt="" srcset="">
           </a>
         </div>
       </article>
