--- a/osteopathie.html
+++ b/osteopathie.html
@@ -54,7 +54,7 @@
   </header>
   <main class="">
     <section class="banner">
-      <img class="banner__img" src="/assets/images/banner-osteo.jpg" alt="séance osteopathie">
+      <img class="banner__img" src="./assets/images/banner-osteo.jpg" alt="séance osteopathie">
       <div class="banner__wrapper">
        <h2 class="banner__title">Consultation d'Ostéopathie</h2>
       </div>
