--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           </article>
         </div>
 
-        <div class="comfort__wrapper__home">
+        <div class="comfort__wrapper__home flex-column">
           <article class="comfort__wrapper__home__article">
             <h3>Un Accueil Serein dans Notre Clinique à Mérignac</h3>
             <div class="comfort_wrapper__home__article__text">
