osteo all class

--- a/index.html
+++ b/index.html
@@ -233,8 +233,7 @@
             <figcaption class="osteo__all__figcaption">
               <h3 class="osteo__all__figcaption__title">Enfants</h3>
               <p class="osteo__all__figcaption__desc">
-                Prévenir les troubles posturaux, favoriser une croissance et
-                un équilibre sain.
+                Prévenir les troubles posturaux et favoriser une croissance harmonieuse grâce à un suivi ostéopathique. L’ostéopathie aide à corriger les déséquilibres, améliore la posture et soutient le bien-être général de votre enfant.
               </p>
               <a class="osteo__all__figcaption__link" href="">En savoir plus</a>
             </figcaption>
@@ -246,7 +245,7 @@
             <figcaption class="osteo__all__figcaption">
               <h3 class="osteo__all__figcaption__title">Femmes enceintes</h3>
               <p class="osteo__all__figcaption__desc">
-                Soulager les douleurs, préparer le corps pour une grossesse harmonieuse.
+                Soulager les douleurs, préparer le corps pour une grossesse harmonieuse. L'ostéopathie rééquilibre votre corps pendant la grossesse, facilite l'accouchement et soulage les douleurs postnatales, tout en soutenant le bien-être de la maman et du bébé.
               </p>
               <a class="osteo__all__figcaption__link" href="">En savoir plus</a>
             </figcaption>
@@ -258,7 +257,7 @@
             <figcaption class="osteo__all__figcaption">
               <h3 class="osteo__all__figcaption__title">Seniors</h3>
               <p class="osteo__all__figcaption__desc">
-                Maintenir la mobilité, prévenir les douleurs articulaires et vertébrales efficacement.
+                Maintenir la mobilité, prévenir les douleurs articulaires et vertébrales efficacement. L'ostéopathie aide à soulager les douleurs liées à l'arthrose, les tensions musculaires et les troubles fonctionnels, tout en soutenant la santé globale.
               </p>
               <a class="osteo__all__figcaption__link" href="">En savoir plus</a>
             </figcaption>
@@ -268,10 +267,11 @@
           <figure class="osteo__all__figure">
             <img class="osteo__all__img" src="./assets/images/Enfants.jpg" alt="" />
             <figcaption class="osteo__all__figcaption">
-              <h3 class="osteo__all__figcaption__title">Enfants</h3>
+              <h3 class="osteo__all__figcaption__title">Sportifs</h3>
               <p class="osteo__all__figcaption__desc">
-                Prévenir les troubles posturaux, favoriser une croissance et
-                un équilibre sain.
+                Optimiser les performances, prévenir et traiter les blessures liées au sport.
+
+L'ostéopathie aide à prévenir et traiter les blessures sportives comme les entorses, déchirures, et douleurs chroniques. Elle améliore la mobilité, optimise les performances et favorise la récupération après l’effort.
               </p>
               <a class="osteo__all__figcaption__link" href="">En savoir plus</a>
             </figcaption>
@@ -281,14 +281,18 @@
           <figure class="osteo__all__figure">
             <img class="osteo__all__img" src="./assets/images/Enfants.jpg" alt="" />
             <figcaption class="osteo__all__figcaption">
-              <h3 class="osteo__all__figcaption__title">Enfants</h3>
+              <h3 class="osteo__all__figcaption__title">Entreprise</h3>
               <p class="osteo__all__figcaption__desc">
-                Prévenir les troubles posturaux, favoriser une croissance et
-                un équilibre sain.
+                Amélioration de la productivité, du bien-être physique et psychique de vos collaborateurs. L'ostéopathie en entreprise prévient les troubles musculo-squelettiques, réduit les arrêts maladie et optimise l'ergonomie, favorisant ainsi un environnement de travail plus productif et sain.
               </p>
               <a class="osteo__all__figcaption__link" href="">En savoir plus</a>
             </figcaption>
           </figure>
+        </div>
+        <div class="osteo__all__link osteo__all__link--services" href="">
+          <h3>L'ostéopathie pour tous les profils
+          </h3>
+          <p>Que vous soyez enfant, femme enceinte, senior, sportif ou en entreprise, l’ostéopathie vous aide à soulager vos douleurs, prévenir les troubles musculo-squelettiques et améliorer votre bien-être au quotidien.</p>
         </div>
       </div>
     </section>
